Bind suggestions directly to existing string models like DropDownList